# Nginx-config-creator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.ru.md  RandomStringGenerator.h  main.cpp
include/: Create_Configs.h  Helper.h  Models.h  RandomStringGenerator.h  config_generators.h
src/: create_config.cpp  helper.cpp  main.cpp  php_http_config.cpp  php_https_config.cpp  redirect_menu.cpp  rp_http_config.cpp  rp_http_https_config.cpp  rp_https_config.cpp  static_http_config.cpp  static_https_config.cpp
